[package]
name = "feed-reader-testbed"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = "0.2"
